# angular-wasm-integration

./: .dockerignore  .gitignore  README.md  dockerfile.api  dockerfile.processor  dockerfile.web
api/: Cargo.toml  spin.toml
api/src/: lib.rs
api/src/auth/: jwt_auth.rs  mod.rs
api/src/http_util/: cors.rs  mod.rs  query_string.rs
api/src/sentinel2/: band.rs  mod.rs
app/: package-lock.json  package.json
app/src/: index.html
app/src/app/: app.component.html  app.component.sass  app.component.ts  app.module.ts  image-processor.service.ts  log.service.ts
app/src/app/debug-log/: debug-log.component.html  debug-log.component.sass  debug-log.component.ts
app/src/app/image-display/: image-display.component.html  image-display.component.sass  image-display.component.ts
app/src/app/image-selection/: image-selection.component.html  image-selection.component.ts
app/src/app/image-stretch-selection/: image-stretch-selection.component.html  image-stretch-selection.component.ts
image-processor/: Cargo.toml  LICENSE_MIT
image-processor/src/: browser.rs  image.rs  lib.rs  processor.rs
scripts/: .names.sh  build.sh  demo.sh  start.sh  stop.sh
