[package]
name = "api"
authors = ["Tom Christian <tom@sparkgeo.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
http = "0.2"
regex = "1.10.2"
reqwest = "0.11.23"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v2.0.1" }

[workspace]
