[package]
name = "api"
authors = ["Tom Christian <tom@sparkgeo.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
hmac = "0.12.1"
http = "0.2"
jwt = "0.16.0"
lazy_static = "1.4.0"
regex = "1.10.2"
sha2 = "0.10.8"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v2.0.1" }

[workspace]
